<resources>
    <string name="app_name">Mqtt</string>
    <string name="gearbox_storage_control">GEARBOX STORAGE CONTROL</string>
    <string name="master_control">Master Control</string>
    <string name="none">none</string>
    <string name="storage_four">STORAGE FOUR</string>
    <string name="storage_three">STORAGE THREE</string>
    <string name="storage_one">STORAGE ONE</string>
    <string name="storage_two">STORAGE TWO</string>
    <string name="gearbox_storage_access">Gearbox Storage Access</string>
    <string name="gearbox_storage_access_caps">GEARBOX STORAGE ACCESS</string>
    <string name="powered_by">Powered by:</string>
    <string name="logo">logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="g_e_a_r_b_o_x_i_o_t">G-E-A-R-B-O-X | I-O-T</string>
    <string name="back">back</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="closets">Closets</string>
    <string name="lights">Lights</string>
    <string name="door">Door</string>
</resources>